# SlaySP2Manger

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  LICENSE  README.en.md  README.md  index.html  package-lock.json  package.json
docs/: frontend-wireframe-design-tokens.md  product-prd.md  remotecache-vdf-reference.md  rust-tauri-architecture.md  save-file-reference.md  sqlite-schema.md  src-tauri-skeleton.md  (+1 more)
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: bootstrap.rs  commands.rs  events.rs  mod.rs  state.rs
src-tauri/src/domain/: backup.rs  compendium.rs  conflict.rs  game.rs  install_plan.rs  mod.rs  mod_entity.rs  profile.rs  remote_mod.rs  save.rs  task.rs  update.rs
src-tauri/src/integrations/: archive.rs  filesystem.rs  manifest.rs  mod.rs  nexus_client.rs  settings_repo.rs  steam.rs
src-tauri/src/repositories/: backups_repo.rs  mod.rs  profiles_repo.rs  settings_repo.rs  tasks_repo.rs
src-tauri/src/services/: backup_service.rs  compendium_service.rs  diagnostics_service.rs  discover_service.rs  game_service.rs  mod.rs  mod_service.rs  profile_service.rs  save_service.rs  task_service.rs  update_service.rs
src-tauri/src/utils/: error.rs  hash.rs  http.rs  mod.rs  path.rs  text.rs  time.rs  version.rs
src-tauri/src/workflows/: apply_profile_workflow.rs  install_archive_workflow.rs  install_remote_workflow.rs  mod.rs  restore_backup_workflow.rs  save_transfer_workflow.rs  update_mod_workflow.rs
src-tauri/windows/fragments/: remove-desktop-shortcut.wxs
(+51 files in other folders)
