[package]
name = "slaysp2manager"
version = "0.7.1"
edition = "2021"

[lib]
name = "slaysp2manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2.1.1", features = [] }
thiserror = "2.0.8"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
rfd = "0.15.4"
zip = "2.4.2"
sevenz-rust = "0.6"
infer = "0.16"
reqwest = { version = "0.12", features = ["blocking", "json", "socks"] }
dirs-next = "2.0"
winreg = "0.55"
tauri-plugin-updater = "2"
sha1 = "0.10"
filetime = "0.2"
